graphql-parser/tests/snapshots/tests__interface__parse_schema__unix.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Ok(
    Document {
        definitions: [
            Type(
                Interface(
                    InterfaceType {
                        position: Pos(1:1),
                        description: None,
                        name: "Bar",
                        implements_interfaces: [],
                        directives: [],
                        fields: [
                            Field {
                                position: Pos(2:3),
                                description: None,
                                name: "one",
                                arguments: [],
                                field_type: NamedType(
                                    "Type",
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
